# EAX

./: README.md  pyproject.toml
eval/: bleurt_eval.py  comet_eval.py  rm_score.py  run_eval.py  run_eval_flores.py  sacrebleu_eval.py
inference/: run_direct_mt_sampling.py  run_eaxt_sampling.py  run_sampling_bleurt_score.py  run_sampling_rm_score.py  run_vllm_eaxt_generation.py  run_vllm_mt_generation.py
recipes/: rm.md  sft.md  xpo.md
scripts/: construct_preference_data.py  post_clean_sampling_data.py  prepare_rm_instruction_data.py  prepare_rm_seed_data.py  prepare_sft_instruction_data.py  prepare_x2x_seed_data.py
utils/: configs.py  helpers.py  prompts.py
